clusters/base/telemetry/resources/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: telemetry
spec:
  ingressClassName: nginx
  rules:
    - host: host.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 80
